--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,8 +27,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: https://tSigler2.github.io # the subpath of your site, e.g. /blog
 url: https://tSigler2.github.io # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  tSigler2
 
 # Build settings
 theme: minima
